HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeReadMode/Expected.uv
//! Expected diagnostic metadata for the SpeculativeReadMode rejected-source specimen.

expectedDiagnostic("E-CON-0095", "rule.19.K-Spec-Write-Required")
